crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__model_selection_popup.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: popup
---
               ██████  ██    ██ ████████ ██████  ██████  ██    ██
              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██
              ██    ██ ██    ██    ██    ██████ ██    ██   ████
              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██
               ██████   ██████     ██    ██      ██████  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant




  Select model
  Configured providers and their available models.

  Search model
  OpenAI
› gpt-5.2-savfox (default)  Latest frontier agentic coding model.
  gpt-5.2                   Latest frontier model with improvements across
                            knowledge, reasoning and coding
  gpt-5.1-savfox-max        Savfox-optimized flagship for deep and fast
                            reasoning.
  gpt-5.1-savfox-mini       Optimized for savfox. Cheaper, faster, but less
                            capable.

  Press enter to select reasoning effort, or esc to dismiss.
