crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__rate_limit_switch_prompt_popup.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: popup
---
              ▄█▀▀▀▀█▄  ▄█▀▀█▄  ██    ██ ██████  ▄█▀▀█▄  ██    ██
              ██        ██  ██  ██    ██ ██     ██    ██  ██  ██
               ██████  ████████ ██    ██ █████  ██    ██   ████
                    ██ ██    ██  ██  ██  ██     ██    ██  ██  ██
               ▀████▀  ██    ██   ▀██▀   ██      ▀█▄▄█▀  ██    ██

                                Welcome to Savfox
                            Your AI coding assistant



D:\Works\savfox-ai\savfox\crates\tui                              gpt-5 OpenAI
────────────────────────────────────────────────────────────────────────────────
❯ Type @ to mention files, / for commands, or ? for shortcuts
────────────────────────────────────────────────────────────────────────────────
  ? for shortcuts                                            100% context left
