crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__status_widget_active.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: terminal.backend()
---
"               ██████  ██    ██ ████████ ██████  ██████  ██    ██               "
"              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██                "
"              ██    ██ ██    ██    ██    ██████ ██    ██   ████                 "
"              ██    ██ ██    ██    ██    ██     ██    ██  ██  ██                "
"               ██████   ██████     ██    ██      ██████  ██    ██               "
"                                                                                "
"                                Welcome to Savfox                               "
"                            Your AI coding assistant                            "
"                                                                                "
"                                                                                "
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"D:\Works\savfox-ai\savfox\crates\tui                     gpt-5.2-savfox OpenAI  "
"────────────────────────────────────────────────────────────────────────────────"
"❯ Type @ to mention files, / for commands, or ? for shortcuts                   "
"────────────────────────────────────────────────────────────────────────────────"
"  ? for shortcuts                                            100% context left  "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
