crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__unified_exec_non_empty_then_empty_active.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: active_combined
---
↳ Interacted with background terminal · just fix
  └ pwd
