crates/tui/src/chat_screen/snapshots/savfox_tui__chat_screen__tests__unified_exec_wait_after_final_agent_message.snap
---
source: crates/tui/src/chat_screen/tests.rs
expression: combined
---
↳ Interacted with background terminal · cargo test -p savfox-core
  └ (waited)

• Final response.
